--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'com.google.android.gms:play-services-maps:17.0.1'
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.0.0'
     annotationProcessor "android.arch.persistence.room:compiler:1.1.1"
     implementation 'androidx.room:room-runtime:2.3.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
